--- a/source/_posts/2018-06-12.md
+++ b/source/_posts/2018-06-12.md
@@ -22,6 +22,13 @@ hexo new "这是一个新的博客"
 ### 头像更换
 更换主题下的source/images/avatar.gif
 
+### 段落缩进
+```bash
+半方大的空白&ensp;或&#8194;
+全方大的空白&emsp;或&#8195;
+不断行的空白格&nbsp;或&#160;
+```
+
 ### Run server
 
 ``` bash
