--- a/source/_posts/前端异常监控.md
+++ b/source/_posts/前端异常监控.md
@@ -17,7 +17,7 @@ categories: 前端
 - 当前代码块将作为一个任务压入任务队列中，JS 线程会不断地从任务队列中提取任务执行。
 - 当任务执行过程中出现异常，且异常没有捕获处理，则会一直沿着调用栈一层层向外抛出，最终终止当前任务的执行。
 - JS 线程会继续从任务队列中提取下一个任务继续执行。
-
+<!-- more -->
 ```html
 <script>
   error
