--- a/source/_posts/前端缓存.md
+++ b/source/_posts/前端缓存.md
@@ -9,7 +9,7 @@ tags: [前端, 缓存, http, 计算机网络]
 {% asset_img 1.PNG  浏览器通过代理服务器向源服务器发起请求的原理图 %}
 &emsp;&emsp;浏览器先向代理服务器发起Web请求，再将请求转发到源服务器。它属于共享缓存，所以很多地方都可以使用其缓存资源，因此对于节省流量有很大作用。
 &emsp;&emsp;浏览器缓存是将文件保存在客户端，在同一个会话过程中会检查缓存的副本是否足够新，在后退网页时，访问过的资源可以从浏览器缓存中拿出使用。通过减少服务器处理请求的数量，用户将获得更快的体验
-
+<!-- more -->
 # 浏览器缓存
 页面的缓存状态是由header决定的，header的参数有四种：
 ## Cache-Control
